[workspace]

members = [
    "freertos-rust",
    "freertos-cargo-build",
    "freertos-rust-examples/examples/stm32f407-segger-trace",
    "freertos-rust-examples/examples/stm32-cortex-m4-blackpill",
    "freertos-rust-examples/examples/stm32-cortex-m3",
    "freertos-rust-examples/examples/nrf9160",
    "freertos-rust-examples/examples/linux",
    # Can use this, once all Cargo.toml's are in place
#    "freertos-rust-examples/examples/*"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
