[package]
name = "freertos-rust-example-linux"
version = "0.1.1"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = """
Example linux
"""
keywords = ["FreeRTOS", "embedded", "demo", "examples"]
repository = "https://github.com/lobaro/FreeRTOS-rust"

[dependencies.freertos-rust]
path = "../../../freertos-rust"

[dependencies]

[build-dependencies]
freertos-cargo-build = {path = "../../../freertos-cargo-build"}

[[bin]]
name = "freertos-linux"
test = false
bench = false
path = "main.rs"