[package]
name = "freertos-rust-example-nrf9160"
version = "0.1.1"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = """
Example nrf9160
"""
keywords = ["FreeRTOS", "embedded", "demo", "examples"]
repository = "https://github.com/lobaro/FreeRTOS-rust"

[dependencies.freertos-rust]
path = "../../../freertos-rust"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
nrf9160-pac = "0.11.0"

[build-dependencies]
freertos-cargo-build = {path = "../../../freertos-cargo-build"}

[[bin]]
name = "stm32f047-segger-trace"
test = false
bench = false
path = "main.rs"